# tenet

./: .env  .gitignore  Cargo.toml  README.md  test.json
.github/workflows/: rust.yml
migrations/2023-04-24-144538_tenant/: down.sql  up.sql
migrations/2023-04-24-145028_applications/: down.sql  up.sql
migrations/2023-04-24-145040_roles/: up.sql
src/: application.rs  application_type.rs  encryption_modes.rs  error.rs  lib.rs  role.rs  role_type.rs  schema.rs  storage.rs  storage_type.rs  tenant.rs  user.rs
src/postgresql/: database.rs  dbapplication.rs  dbrole.rs  dbstorage.rs  dbtenant.rs  dbuser.rs  mod.rs  service_error.rs
