[package]
name = "tenet"
description = "User and Tenant management for Saas applications"
authors = ["Stefan Schick <stefan.schick@stecug.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://stecug.de"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.69"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
chrono = { version = "0.4.19", features = ["serde"] }

serde = "1.0.217"
serde_json = "1.0.138"
serde_derive = "1.0.217"

r2d2 = "0.8.10"

diesel = { version = "2.1", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.1"

rand = "0.8.3"
rust-argon2 = "2.0.0"

log = "0.4.25"
simple_logger = "4.3.3"


[dev-dependencies]
testcontainers-modules = { version = "0.11.6", features = ["postgres", "blocking"] }