[package]
name = "stec_tenet"
description = "User and Tenant management for Saas applications"
authors = ["Stefan Schick <stefan.schick@stecug.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://stecug.de"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }

serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.219"

r2d2 = "0.8.10"

diesel = { version = "2.2.10", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.2.0"

rand = "0.9.1"
rust-argon2 = "2.1.0"

log = "0.4.27"
simple_logger = "5.0.0"


[dev-dependencies]
testcontainers-modules = { version = "0.12.1", features = ["postgres", "blocking"] }